# stb-suite

./: LICENSE  README.md
stb-bands/: README.md  stb-bands.x
stb-bands/example/: siesta.bands
stb-convdos/: README.md  stb-convdos.x
stb-structural/: README.md  stb-structural.x
stb-structural/examples/: 8H24I4N2Pb-peroviskite.cif  ca01.cif  peroviskt-organic.vasp
stb-suite/: meta.yaml  pyproject.toml
stb-suite-dev/: meta.yaml  pyproject.toml
stb-suite-dev/src/stb/: convdos.py  stb_suite.py  structural.py
stb-suite-dev/src/stb_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stb-suite/src/stb/: bands.py  clean.py  convdos.py  dos.py  inputfile.py  kgrid.py  kpath.py  stb_suite.py  strain.py  structural.py  symmetry.py  translate.py  wantibexos.py
stb-suite/src/stb_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stb-translate/test/convert/: test.dftb  test.fdf  test.fhi  test.poscar  test.xsf  test.xyz
test/1-preparation/4-strain/: structure.fdf
test/3-utilities/2-clean/: BASIS_ENTHALPY  BASIS_HARRIS_ENTHALPY  MESSAGES  O.ion  Sn.ion  Sn.ion.xml  Sn3O4.DM  Sn3O4.DOS  Sn3O4.EIG  Sn3O4.KP  Sn3O4.ORB_INDX  Sn3O4.alloc  Sn3O4.bib  Sn3O4.xyz  TIMES  bands.gplot  basis_set-NP.basis  calc.fdf  job.err  run.sh  structure.fdf
test/3-utilities/3-wantibexos/: CLOCK  FORCE_STRESS  NON_TRIMMED_KP_LIST  O.ion.xml  OUTVARS.yml  PARALLEL_DIST  Sn3O4.BONDS  Sn3O4.FA  Sn3O4.HSX  Sn3O4.RHO  Sn3O4.STRUCT_OUT  Sn3O4.XV  Sn3O4.bands  Sn3O4.times  calc.out
test/test_translate/: test.sh
