[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stb_suite"
version = "1.5.10"
description = "Siesta ToolBox suite with softwares to manipulate the data from (or for) Siesta code."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "matplotlib",
    "pymatgen",
    "spglib",
    "sisl"
]

[project.scripts]
stb-bands = "stb.bands:main"
stb-convdos = "stb.convdos:main"
stb-structural = "stb.structural:main"
stb-translate = "stb.translate:main"
stb-strain = "stb.strain:main"
stb-suite = "stb.stb_suite:main"
stb-clean = "stb.clean:main"
stb-symmetry = "stb.symmetry_analysis:main"
stb-siesta2wtb = "stb.wantibexos_interface:main"
